--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,8 @@
     "makefile.configureOnOpen": false,
     "cSpell.words": [
         "deinit",
+        "Doptimize",
+        "Dtarget",
         "openrouter",
         "satibot"
     ]
