feat: add WhatsApp bot integration with webhook server and command handlers
- Add WhatsAppBot implementation with webhook-based message processing
- Add /help, /setibot, and /new command handlers for WhatsApp
- Add WebhookServer for receiving Meta webhook callbacks
- Add comprehensive unit tests for WhatsApp bot functionality
- Add "getenv" and "setibot" to VSCode spell checker dictionary
- Update Telegram bot with /help and /setibot commands
- Add config file auto-generation from chat interface

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,9 @@
         "deinit",
         "Doptimize",
         "Dtarget",
+        "getenv",
         "openrouter",
-        "satibot"
+        "satibot",
+        "setibot"
     ]
 }
