feat: add graceful shutdown with goodbye messages and typing indicators for Telegram/WhatsApp bots
- Add signal handlers (SIGINT/SIGTERM) for graceful shutdown in Telegram bot
- Track active chats and send goodbye messages on bot termination
- Add typing indicator thread that sends "typing" action every 5 seconds during agent processing
- Add send_chat_action() function to show bot activity status
- Refactor agent processing to run in separate thread with concurrent typing updates
- Add startup

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "Doptimize",
         "Dtarget",
         "getenv",
+        "groq",
         "openrouter",
         "satibot",
         "setibot"
