fix: migrate Telegram bot to fully async event loop architecture with background polling
- Update TELEGRAM_BOT.md to reflect async architecture with background polling thread
- Remove synchronous tick() method from documentation (now legacy)
- Document event loop's pollTelegramTask() running as background thread
- Add signal handling documentation (SIGINT/SIGTERM triggers requestShutdown())
- Document message_sender callback mechanism for decoupled response delivery
- Add AsyncEventLoop.initWith

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,8 @@
         "getenv",
         "groq",
         "openrouter",
-        "satibot"
+        "satibot",
+        "Sigaction",
+        "sigset"
     ]
 }
