docs: add comprehensive Zig compilation error prevention guide covering 0.15.0 API changes and common pitfalls
- Add zig-compilation-errors.md covering type casting, unused parameters, memory management, and thread safety rules
- Document ArrayList API changes (initCapacity, allocator parameters for deinit/append)
- Document signal handling migration (empty_sigset → sigemptyset())
- Document division operation requirements (@divTrunc/@divFloor/@divExact)
- Document atomic value access patterns (

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "getenv",
         "groq",
         "openrouter",
+        "orelse",
         "satibot",
         "Sigaction",
         "sigset"
