refactor: update build commands, documentation, and add PicoClaw comparison table
- Rename build steps: `run-console` → `console`, `run-xev-telegram` → `telegram`
- Add comparison table with OpenClaw, NanoBot, and PicoClaw showing language, RAM usage, startup time, and cost
- Update all command examples in README and DEV docs to use new build step names
- Add note about current platform support (Telegram and console only)
- Remove outdated requirements section (Zig version, memory specs)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "groq",
         "openrouter",
         "orelse",
+        "Pico",
         "satibot",
         "Sigaction",
         "sigset"
