refactor: improve console bot signal handling and update documentation
- Add shutdown flag check in tick() error handler for InputOutput/BrokenPipe errors
- Add shutdown flag check in run() loop error handler before continuing
- Update README with installation steps, Zig version requirement, and PATH setup
- Change README feature list to checkboxes and add OpenRouter provider note
- Add Telegram guide reference and config.json editing instructions
- Simplify run commands to use `satibot console`

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
     },
     "makefile.configureOnOpen": false,
     "cSpell.words": [
+        "Clawd",
         "deinit",
         "Doptimize",
         "Dtarget",
