refactor: add ziglint to development workflow and create Zig best practices guide
- Add "deiniting", "zigdoc", and "ziglint" to cSpell.words in .vscode/settings.json
- Add ziglint check to lint target in Makefile
- Add format to all target in Makefile
- Add ziglint installation instructions to DEV.md
- Create ZIG_BEST_PRACTICES.md with comprehensive guidelines covering code style, memory management, error handling, common patterns, async patterns, testing, and safety conventions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "cSpell.words": [
         "Clawd",
         "deinit",
+        "deiniting",
         "Doptimize",
         "Dtarget",
         "getenv",
@@ -17,6 +18,8 @@
         "Pico",
         "satibot",
         "Sigaction",
-        "sigset"
+        "sigset",
+        "zigdoc",
+        "ziglint"
     ]
 }
