--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "Dtarget",
         "getenv",
         "groq",
+        "milli",
         "openrouter",
         "orelse",
         "Pico",
